--- a/themes/zen_dataportal/sass/cdm.scss
+++ b/themes/zen_dataportal/sass/cdm.scss
@@ -183,6 +183,10 @@ dl.media-caption {
   color: #999;
 }
 
+.typified-name .cdm\:TaxonName {
+  color: #999;
+}
+
 .registration-summary {
   .registered_name .name {
     font-weight: bold;
